--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,8 @@
                     <option value="ERGODOX_COLEMAK">ErgoDox COLEMAK</option>
                     <option value="ERGODOX_QWERTY">ErgoDox QWERTY</option>
                     <option value="ERGODOX_DVORAK">ErgoDox DVORAK</option>
+                    <option value="ERGODOX_NATIVO">ErgoDox NATIVO</option>
+                    <option value="ERGODOX_CUSTOM">ErgoDox CUSTOM</option>
                     <option value="LIIGOL">LIIGOL Layout</option>
                     <option value="MINIMAK_4K">Minimak 4-Keys</option>
                     <option value="MINIMAK_8K">Minimak 8-Keys</option>
